workflows: Add future annotations, break out workflow steps
* Add future annotations to resolve test failures in 3.7 and 3.8, maybe 3.6
* Split the prep and test run into two steps.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       # Runs a single command using the runners shell
-      - name: Run tests
+      - name: Setup reqirements
         run: |
           pip install -r requirements.txt
           pip install -e .
-          testslide -f progress --shuffle tests/*.py
+      - name: Run tests
+        run: |
+          testslide --shuffle tests/*.py
         
         
