--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,6 @@ jobs:
           pip install -e .
       - name: Run tests
         run: |
-          testslide --shuffle tests/*.py
+          testslide -f progress --shuffle tests/*.py
         
         
