Change whole approach to library
* Complete overhaul of how the library will work.
* Abandoning the idea of running 'baresip' in a subprocess or thread.
* BareSIP supports a DBus interface. My target is Linux to start, so talk to it that way.
* Most functions are only skeletons, and may not correctly invoke the command on the server.
* Tests were generated from a template, and don't really test anything yet.
* DBus interface documented for reference.
* Include an example of how to wrap baresip in a thread, but it's not supported.
* Add a hacky script to test the library against an actual baresip installation.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,6 @@ jobs:
           pip install -e .
       - name: Run tests
         run: |
-          testslide -f progress --shuffle tests/*.py
+          testslide -f progress --shuffle tests/baresip_*.py
         
         
